--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.application.name=app-newconection
+#spring.application.name=app-newconection
 #spring.datasource.url=jdbc:h2:D:/02. ITSQMET/THIRD/Web II/base/test
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/BibliotecaDB
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto= update
+
